<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_auto_start_icon">Auto start: on</string>
    <string name="accessibility_battery">battery level %1$d</string>
    <string name="accessibility_battery_charging">charging</string>
    <string name="accessibility_battery_full">full charged</string>
    <string name="accessibility_battery_power_supply">during power supply</string>
    <string name="accessibility_battery_temperature_error">Unable to charge due to abnormal temperature</string>
    <string name="accessibility_common_auto">auto</string>
    <string name="accessibility_common_boost">boost</string>
    <string name="accessibility_common_cool">cool</string>
    <string name="accessibility_common_level_1">level 1</string>
    <string name="accessibility_common_level_2">level 2</string>
    <string name="accessibility_common_level_3">level 3</string>
    <string name="accessibility_common_level_4">level 4</string>
    <string name="accessibility_common_level_4_plus">level 4 plus</string>
    <string name="accessibility_common_level_5">level 5</string>
    <string name="accessibility_common_level_5_plus">level 5 plus</string>
    <string name="accessibility_common_my">my mode</string>
    <string name="accessibility_common_smart">smart</string>
    <string name="accessibility_common_start">start</string>
    <string name="accessibility_common_warm">warm</string>
    <string name="accessibility_device_information">device information</string>
    <string name="accessibility_setting">settings</string>
    <string name="accessibility_waste_heat">exhaust heat</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">REON POCKET</string>
    <string name="app_twitter_url">https://twitter.com/REONPOCKET_JP</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bt_usage_description">Bluetooth is used to operate REON POCKET.</string>
    <string name="bterror_connect_description">Check the following, then try again.\10Check the unit is sufficiently charged.\10Check your smartphone\'s Bluetooth function is on.\10Check your smartphone is near to the unit.\10 \10If it still does not pair, check the methods shown under \"Press here if it will not pair\".</string>
    <string name="bterror_connect_title">Cannot Connect</string>
    <string name="bterror_description">If your attempt fails repeatedly, please visit the support page.</string>
    <string name="bterror_disable_android_api33_description">The Bluetooth function of your smartphone is turned off.\10Please turn on the Bluetooth function.</string>
    <string name="bterror_disable_description">The Bluetooth function of your smartphone is turned off.\10Do you want to turn on the Bluetooth function?</string>
    <string name="bterror_disable_nonpermission_description">Allow access to Bluetooth.</string>
    <string name="bterror_disable_nonpermission_title">Cannot Connect</string>
    <string name="bterror_disable_title">Cannot Connect</string>
    <string name="bterror_location_error_description">The location service is turned off. Turn it on and try again to grant REON POCKET Bluetooth connection. The location won\'t be tracked by the app. This is a procedural requirement by Android.</string>
    <string name="bterror_location_error_title">Cannot Connect</string>
    <string name="bterror_not_battery_description">The device is running out of charge. Charge it and try again.</string>
    <string name="bterror_not_battery_title">Error Occurred</string>
    <string name="bterror_title">Error Occurred</string>
    <string name="bterror_update_description">Check the following and try again:\10- Check the device is connected to a power supply using a USB cable.\10- Check your smartphone is connected to the internet.\10- Check your smartphone is near the device.</string>
    <string name="bterror_update_title">Cannot Update Device Software</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="change_bt_device_description">This unit is already registered to another smartphone.\10Cancel the device registration and try connecting again.\10 \10When connecting, ensure there are no other REON POCKET units in the vicinity.</string>
    <string name="change_bt_device_description_original">This device is already paired to another smartphone.\10To register to this smartphone, reset the device by pressing and holding the device button for about 15 seconds, and try to connect again.\10\10When connecting the device, make sure there is not another REON POCKET device nearby.</string>
    <string name="change_bt_device_description_pro">This device is already registered to another smartphone.\10 To register to this smartphone, press and hold the [SMART] button for five seconds to reset device registration (pairing) information, then try to pair the device again.\10 \10When connecting, make sure that there are no other REON POCKET devices nearby.</string>
    <string name="change_bt_device_title">Cannot Register</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="com.crashlytics.android.build_id">00000000000000000000000000000000</string>
    <string name="common_back">Back</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_celsius">℃</string>
    <string name="common_close">Close</string>
    <string name="common_done">Done</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_hour">%1$dhour</string>
    <string name="common_later">Later</string>
    <string name="common_minute">%1$dmin</string>
    <string name="common_next">Next</string>
    <string name="common_no">NO</string>
    <string name="common_not_show_again">Don\'t show again</string>
    <string name="common_ok">OK</string>
    <string name="common_percent">%</string>
    <string name="common_permit">Allow</string>
    <string name="common_register">Register</string>
    <string name="common_searching">Searching...</string>
    <string name="common_second">%1$dsec</string>
    <string name="common_settings">Settings</string>
    <string name="common_setup">Set</string>
    <string name="common_support">Support</string>
    <string name="common_yes">YES</string>
    <string name="connect_on_going_description">If the LED is not blinking blue, press the button on your device.</string>
    <string name="connect_on_going_title">Connecting...</string>
    <string name="connect_start_connect">CONNECT</string>
    <string name="connect_start_connecting_dialog_title">Connecting</string>
    <string name="connect_start_description_original">Lightly press the button on your device.\10Wait until the LED starts blinking blue and tap [CONNECT].\10\10* If the LED does not blink, the battery of your device may be low. Connect your device to a power supply using a USB cable and tap [CONNECT].</string>
    <string name="connect_start_description_pro">After turning the power on, press and hold the [SMART] button on the device for two seconds.\10 When the LED on the [SMART] button side flashes blue, press [CONNECT].\10 \10*If the power does not turn on, the device may not be charged. Charge the device by connecting it to a power supply using a USB cable.</string>
    <string name="connect_start_title_original">Connect REON POCKET</string>
    <string name="connect_start_title_pro">Connect REON POCKET PRO</string>
    <string name="mainview_content_automode_switch">AUTO</string>
    <string name="mainview_content_boost_indicator">BOOST</string>
    <string name="mainview_content_level_1_indicator">1</string>
    <string name="mainview_content_level_2_indicator">2</string>
    <string name="mainview_content_level_3_indicator">3</string>
    <string name="mainview_content_level_4_indicator">4</string>
    <string name="mainview_content_level_5_indicator">5</string>
    <string name="mainview_content_mode_indicator_cool">COOL</string>
    <string name="mainview_content_mode_indicator_warm">WARM</string>
    <string name="mainview_content_smartmode_switch">SMART</string>
    <string name="mainview_content_stop_switch">STOP</string>
    <string name="mainview_content_wave_switch">WAVE</string>
    <string name="setting_remaining_battery_notification_background_required">Background location information access permission is required</string>
    <string name="setting_remaining_battery_notification_description">This application requires permission to access location information, even when the application is closed, in order to notify you when the battery level of the device is low. Please select \"Always allow.\"\10\10Access to location information is also used to obtain the operating data of the device and to develop and improve products and services.\10\10Location information access is necessary for Bluetooth communication with REON POCKET, but location information itself is not acquired or stored.\"</string>
    <string name="setting_remaining_battery_notification_enabled_status">Currently available for use</string>
    <string name="setting_remaining_battery_notification_go_to_setting">Set</string>
    <string name="setting_remaining_battery_notification_status">Current settings</string>
</resources>