<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/colorSettingBg" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingStart="16dp" android:paddingEnd="16dp">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <jp.co.sony.reonpocket.view.CustomFontTextView android:gravity="start" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="12dp" android:text="@string/setting_remaining_battery_notification_description"/>
        <jp.co.sony.reonpocket.view.CustomFontTextView android:textStyle="bold" android:gravity="start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_remaining_battery_notification_status"/>
        <jp.co.sony.reonpocket.view.CustomFontTextView android:textStyle="bold" android:gravity="start" android:id="@+id/permission_enabled" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_remaining_battery_notification_enabled_status"/>
        <jp.co.sony.reonpocket.view.CustomFontTextView android:textStyle="bold" android:gravity="start" android:id="@+id/permission_disabled" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_remaining_battery_notification_background_required"/>
        <ImageView android:background="@drawable/img_divider" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="24dp"/>
        <jp.co.sony.reonpocket.view.CustomImageView android:layout_width="match_parent" android:layout_height="wrap_content" android:src="0x7f08011b" android:scaleType="fitCenter"/>
    </LinearLayout>
    <jp.co.sony.reonpocket.view.CustomFontButton android:layout_gravity="center_horizontal" android:id="@+id/transit_setting" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16dp" android:maxWidth="300dp" android:text="@string/setting_remaining_battery_notification_go_to_setting"/>
</LinearLayout>
