<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:focusableInTouchMode="false" android:layout_width="match_parent" android:layout_height="match_parent" android:importantForAccessibility="no">
    <jp.co.sony.reonpocket.view.CustomFontTextView android:focusable="false" android:focusableInTouchMode="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/mainview_content_mode_indicator_warm" android:importantForAccessibility="no" android:textAlignment="center" style="@style/MainWarmTitle"/>
    <LinearLayout android:gravity="bottom" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:weightSum="10">
        <FrameLayout android:id="@+id/warm_frame" android:focusableInTouchMode="false" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="9.5" android:importantForAccessibility="no">
            <LinearLayout android:orientation="vertical" android:id="@+id/warm_level_container" android:focusableInTouchMode="false" android:layout_width="match_parent" android:layout_height="match_parent" android:importantForAccessibility="no">
                <LinearLayout android:id="@+id/warm_background_1" android:background="@color/LevelBackgroundWarmOff" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"/>
                <View android:background="@color/DividerCool" android:layout_width="match_parent" android:layout_height="1dp"/>
                <LinearLayout android:id="@+id/warm_background_2" android:background="@color/LevelBackgroundWarmOff" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"/>
                <View android:background="@color/DividerCool" android:layout_width="match_parent" android:layout_height="1dp"/>
                <LinearLayout android:id="@+id/warm_background_3" android:background="@color/LevelBackgroundWarmOff" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"/>
                <View android:background="@color/DividerCool" android:layout_width="match_parent" android:layout_height="1dp"/>
                <LinearLayout android:id="@+id/warm_background_4" android:background="@color/LevelBackgroundWarmOff" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"/>
            </LinearLayout>
            <jp.co.sony.reonpocket.view.CustomSlideView android:id="@+id/warm_slideView" android:focusableInTouchMode="false" android:layout_width="match_parent" android:layout_height="match_parent" android:importantForAccessibility="no" app:maxLevel="5"/>
            <LinearLayout android:orientation="vertical" android:id="@+id/warm_text_container" android:focusableInTouchMode="false" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="match_parent" android:importantForAccessibility="no">
                <androidx.constraintlayout.widget.ConstraintLayout android:focusableInTouchMode="false" android:layout_width="match_parent" android:layout_height="1dp" android:layout_weight="1" android:importantForAccessibility="no">
                    <LinearLayout android:id="@+id/level4_text_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
                        <androidx.appcompat.widget.AppCompatToggleButton android:id="@+id/level4_toggle_button" android:background="@color/colorTransparent" android:layout_width="match_parent" android:layout_height="match_parent" android:textOn="@string/mainview_content_boost_indicator" android:textOff="@string/mainview_content_boost_indicator" android:minHeight="32dp" android:text="@string/mainview_content_boost_indicator" android:contentDescription="@string/accessibility_common_level_4" style="@style/MainLevel"/>
                    </LinearLayout>
                    <jp.co.sony.reonpocket.view.CustomFontTextView android:id="@+id/warm_countdown" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="16dp" android:text="0:00" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/level4_text_layout" style="@style/MainBoostCountDown"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <View android:background="@color/DividerCool" android:layout_width="match_parent" android:layout_height="1dp"/>
                <androidx.appcompat.widget.AppCompatToggleButton android:id="@+id/level3_toggle_button" android:background="@color/colorTransparent" android:layout_width="match_parent" android:layout_height="1dp" android:textOn="@string/mainview_content_level_3_indicator" android:textOff="@string/mainview_content_level_3_indicator" android:text="@string/mainview_content_level_3_indicator" android:layout_weight="1" android:contentDescription="@string/accessibility_common_level_3" style="@style/MainLevel"/>
                <View android:background="@color/DividerCool" android:layout_width="match_parent" android:layout_height="1dp"/>
                <androidx.appcompat.widget.AppCompatToggleButton android:id="@+id/level2_toggle_button" android:background="@color/colorTransparent" android:layout_width="match_parent" android:layout_height="1dp" android:textOn="@string/mainview_content_level_2_indicator" android:textOff="@string/mainview_content_level_2_indicator" android:text="@string/mainview_content_level_2_indicator" android:layout_weight="1" android:contentDescription="@string/accessibility_common_level_2" style="@style/MainLevel"/>
                <View android:background="@color/DividerCool" android:layout_width="match_parent" android:layout_height="1dp"/>
                <androidx.appcompat.widget.AppCompatToggleButton android:id="@+id/level1_toggle_button" android:background="@color/colorTransparent" android:layout_width="match_parent" android:layout_height="1dp" android:textOn="@string/mainview_content_level_1_indicator" android:textOff="@string/mainview_content_level_1_indicator" android:text="@string/mainview_content_level_1_indicator" android:layout_weight="1" android:contentDescription="@string/accessibility_common_level_1" style="@style/MainLevel"/>
            </LinearLayout>
        </FrameLayout>
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/cool_bottom_group" android:paddingTop="32dp" android:paddingBottom="32dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="16dp" android:paddingEnd="16dp">
            <androidx.appcompat.widget.AppCompatToggleButton android:enabled="false" android:id="@+id/main_warm_left_button_dummy" android:background="@color/colorTransparent" android:padding="8dp" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@string/mainview_content_wave_switch" android:textOff="@string/mainview_content_wave_switch" android:text="@string/mainview_content_wave_switch" app:layout_constrainedWidth="true" app:layout_constraintEnd_toStartOf="@+id/main_warm_off" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="0" app:layout_constraintTop_toTopOf="0" style="@style/MainCoolToggleText"/>
            <androidx.appcompat.widget.AppCompatButton android:id="@+id/main_warm_off" android:background="@drawable/bg_main_warm_common_button" android:padding="8dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mainview_content_stop_switch" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constrainedWidth="true" app:layout_constraintEnd_toStartOf="@+id/main_warm_auto_smart_layout" app:layout_constraintStart_toEndOf="@+id/main_warm_left_button_dummy" app:layout_constraintTop_toBottomOf="0" app:layout_constraintTop_toTopOf="0" style="@style/MainOffText"/>
            <FrameLayout android:id="@+id/main_warm_auto_smart_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/main_warm_off" app:layout_constraintTop_toBottomOf="0" app:layout_constraintTop_toTopOf="0">
                <androidx.appcompat.widget.AppCompatToggleButton android:id="@+id/main_warm_auto" android:background="@color/colorTransparent" android:padding="8dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@string/mainview_content_automode_switch" android:textOff="@string/mainview_content_automode_switch" android:text="@string/mainview_content_automode_switch" app:layout_constrainedWidth="true" style="@style/MainWarmToggleText"/>
                <androidx.appcompat.widget.AppCompatButton android:id="@+id/main_warm_smart" android:background="@drawable/bg_main_view_smart_warm_selector" android:padding="8dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mainview_content_smartmode_switch" app:layout_constrainedWidth="true" style="@style/MainSmartText"/>
            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>
